# AAP-Enterprise-MCP-Server

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_REDHAT_DOCS.md  anomaly.py  ansible-lint.py  ansible-mcp.mdc  ansible.py  ansible_runner.py  app.py  claude_desktop_config.json  eda.py  exports.sh  mcp-config-example.json  network_analytics.py  pyproject.toml  redhat_docs.py  web_search_vs_api_comparison.md
agent/: actions copy.py  actions.py  detector.py  loader.py  runner.py
outputs/: iosxr_merged_20251007-124527.json
outputs/.pids/: ui.pid
templates/: anomalies.html  anomalies_table.html  base.html  health.html  health_grid.html  index.html  plan.html  report.html  reports.html
uploads/: aa_inventory.json
